<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProLib</string>
    <string name="miShowAuthorList">Author List</string>
    <string name="ivAvailability">Availability</string>
    <string name="miAddBook">Add Book</string>
    <string name="title_activity_add_book">Add Book</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_hint">Book Title</string>
    <string name="author_hint">Author</string>
    <string name="publisher_hint">Publisher</string>
    <string name="categories_hint">Categories</string>
    <string name="btnSubmit">Submit</string>
    <string name="btnCheckout">Checkout</string>
    <string name="alert_delete_title">Delete</string>
    <string name="alert_delete_message">Do you want to delete this item?</string>
    <string name="alert_cancel_title">Cancel?</string>
    <string name="alert_cancel_message">You have unsaved changes. Are you sure you want to cancel adding a book?</string>
    <string name="alert_ok">OK</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_yes">Yes</string>
    <string name="alert_no">No</string>
    <string name="error_title_required">Please enter book title</string>
    <string name="error_author_required">Please enter name</string>
    <string name="error_publisher_required">Please enter publisher</string>
    <string name="error_categories_required">Please enter categories</string>
    <string name="error_author_has_number">Please input alphabets only</string>
    <string name="error_completing_request">Unable to complete request</string>
    <string name="error_no_network">No Network Connection</string>
    <string name="error_no_network_message">Please check your network settings and try again</string>
    <string name="miDone">Done</string>
    <string name="title_activity_book_detail">Book Details</string>
    <string name="publisher">Publisher</string>
    <string name="last_checkout">Last Checkout</string>
    <string name="available">Available</string>
    <string name="alert_book_not_found">Book not found</string>
    <string name="alert_book_not_found_message">The book that you are looking for has been removed from the library</string>
    <string name="alert_prompt_name">Enter name</string>
    <string name="miShare">Share</string>
    <string name="share_task_list">Share Task List</string>
</resources>
