<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:etvalidator="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.prolific.prolib.activities.AddBookActivity">

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/title_hint"
        android:imeOptions="actionNext"
        android:inputType="textAutoComplete"
        android:maxLines="1"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/author_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        etvalidator:testType="alpha"
        etvalidator:emptyErrorString="@string/error_author_required"
        etvalidator:testErrorString="@string/error_author_has_number"
        android:maxLines="1"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/publisher_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:maxLines="1"/>

    <com.andreabaccega.widget.FormEditText
        android:id="@+id/etCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:hint="@string/categories_hint"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete"
        android:maxLines="1"/>

    <Button
        android:id="@+id/btnSubmit"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="addBook"
        android:text="@string/btnSubmit" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        style="@style/TextViewThin"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"/>

</LinearLayout>
